# spider_bot_bringup

./: .commitlintrc.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PLAN.md  README.md
.github/: labeler.yml
.github/workflows/: compliance.yml  labeler.yml  ros-ci.yml
big_bertha_description/: CMakeLists.txt  package.xml
big_bertha_description/config/: ros2_control.yaml
big_bertha_description/launch/: rsp.launch.py
big_bertha_description/meshes/: arm_a_1_1.stl  arm_a_2_1.stl  arm_a_3_1.stl  arm_a_4_1.stl  arm_b_1_1.stl  arm_b_2_1.stl  arm_b_3_1.stl  arm_b_4_1.stl  arm_c_1_1.stl  arm_c_2_1.stl  arm_c_3_1.stl  arm_c_4_1.stl  base_link.stl  battery_3s2p.stl  ydlidar.stl
big_bertha_description/rviz/: description.rviz
big_bertha_description/urdf/: big_bertha.gazebo.xacro  big_bertha.ros2_control.xacro  big_bertha.urdf.xacro
big_bertha_hardware_bringup/: CHANGES.md  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
big_bertha_hardware_bringup/big_bertha_hardware_bringup/: hardware_bridge_node.py
big_bertha_hardware_bringup/config/: hardware_bridge.yaml
big_bertha_hardware_bringup/firmware/big_bertha_hardware/: app.yaml
big_bertha_hardware_bringup/firmware/big_bertha_hardware/python/: main.py
big_bertha_hardware_bringup/firmware/big_bertha_hardware/sketch/: mpu6050.cpp  mpu6050.h  pca9685.cpp  pca9685.h  sketch.ino  sketch.yaml
big_bertha_hardware_bringup/include/big_bertha_hardware_bringup/: mini_msgpack.hpp  router_bridge.hpp
big_bertha_hardware_bringup/launch/: hardware_bridge.launch.py
big_bertha_hardware_bringup/src/: hardware_bridge_node.cpp  router_bridge.cpp
big_bertha_leg_odometry/: CMakeLists.txt  package.xml
big_bertha_leg_odometry/config/: leg_odometry.yaml
big_bertha_leg_odometry/include/big_bertha_leg_odometry/: contact_estimator.hpp  leg_kinematics.hpp
big_bertha_leg_odometry/launch/: leg_odometry.launch.py
big_bertha_leg_odometry/src/: contact_estimator.cpp  leg_kinematics.cpp  leg_odometry_node.cpp
big_bertha_leg_odometry/test/: verify_leg_odometry.sh
big_bertha_policy_controller/: CMakeLists.txt  README.md  package.xml
big_bertha_policy_controller/config/: policy.yaml
big_bertha_policy_controller/include/big_bertha_policy_controller/: observation_builder.hpp
big_bertha_policy_controller/launch/: policy_controller.launch.py
big_bertha_policy_controller/models/: policy.onnx
big_bertha_policy_controller/src/: policy_controller_node.cpp
big_bertha_policy_controller/test/: verify_locomotion.sh
big_bertha_sim_bringup/: CMakeLists.txt  README.md  package.xml
big_bertha_sim_bringup/config/: ros_gz_bridge.yaml
big_bertha_sim_bringup/launch/simulation/: simulation.launch.py
big_bertha_sim_bringup/rviz/: simulation.rviz
big_bertha_sim_bringup/test/: verify_simulation.sh
big_bertha_sim_bringup/worlds/: obstacle_world.sdf
big_bertha_state_estimation/: CMakeLists.txt  package.xml
big_bertha_state_estimation/config/: ekf.yaml  ekf_sim.yaml
big_bertha_state_estimation/launch/state_estimation/: ekf.launch.py
big_bertha_state_estimation/test/: verify_state_estimation.sh
docs/: ros_graph.md  ros_graph_real.md
scripts/: install_jazzy.sh
spider_msgs/: CMakeLists.txt  package.xml
spider_msgs/msg/: GaitCommand.msg  PolicyStatus.msg
spider_msgs/srv/: LoadPolicy.srv  SetPolicyEnabled.srv
