<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>big_bertha_leg_odometry</name>
  <version>0.1.0</version>
  <description>
    C++ leg odometry node for Big Bertha. Computes base twist from forward
    kinematics of the 12 leg joints and stance-contact detection. Publishes
    /leg_odom for fusion in robot_localization EKF (Module 7).
  </description>
  <maintainer email="jjateen97@gmail.com">Jjateen Gundesha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
