<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>big_bertha_policy_controller</name>
  <version>0.1.0</version>
  <description>
    C++ ONNX Runtime gait controller for Big Bertha. Subscribes to
    /odom, /imu, /joint_states and /cmd_vel, assembles the 48-d observation,
    runs the exported PPO policy, and streams 12 position targets on
    /position_controller/commands. Publishes PolicyStatus and offers
    SetPolicyEnabled + LoadPolicy services.
  </description>
  <maintainer email="jjateen97@gmail.com">Jjateen Gundesha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>spider_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
